# mediQR-backend

./: .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt  test_e2e.py  test_ocr.py
app/: main.py
app/core/: ai.py  config.py  deps.py  exceptions.py  logging.py  security.py  storage.py
app/db/: base.py
app/db/models/: __init__.py  doses.py  prescriptions.py  qr.py  sources.py  users.py
app/modules/auth/: router.py  schemas.py  service.py
app/modules/doctors/: repository.py  router.py  schemas.py  service.py
app/modules/doses/: repository.py  router.py  schemas.py  service.py
app/modules/ocr/: repository.py  router.py  schemas.py  service.py
app/modules/patients/: repository.py  router.py  schemas.py  service.py
app/modules/prescriptions/: repository.py  router.py  schemas.py  service.py
app/modules/qr/: repository.py  router.py  schemas.py  service.py
migrations/: env.py
migrations/versions/: 27d59052a004_init.py  4cc2092b3144_add_email_and_otp_tables.py
